--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 == README
-
+Acabo de agregar una línea
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
